# ransom_educational

./: .gitignore  Cargo.toml  README.md
src/: .app.rs.swp  app.rs  cyp.rs  dummy.rs  main.rs  net.rs  smtp.rs
trash/: foo.txt  lala  lolo
trash/d1/: gou
