[package]
name = "cyp"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
rsa = "0.9.7"
rand = "0.8.5"
sendmail = "2.0"
getopt = "1.1.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.133"

[profile.dev.package.num-bigint-dig]
opt-level = 3
